--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_mapbox_navigation: ^0.2.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
