--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_mapbox_navigation: ^0.2.2
   get: ^4.6.6
+  fl_chart: ^0.67.0
 
 dev_dependencies:
   flutter_test:
