--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,13 @@ allprojects {
     }
 }
 
+buildscript {
+    ext.kotlin_version = '1.9.23'  // This is the line you're looking for
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
